@@ -1,2 +1,0 @@
-from posix import __all__
-from posix import *
